examples/simple_example/2_k8sticket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sticket
  namespace: example
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: k8sTicket
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8sTicket
    spec:
      containers:
      - image: ipbhalle/k8sticket
        imagePullPolicy: Always
        name: k8sticket
        ports:
        - containerPort: 9001
          name: serviceport
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: k8sticket-watcher
      serviceAccountName: k8sticket-watcher
      terminationGracePeriodSeconds: 30
