examples/simple_example/3_k8sTicket_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sticket-service
  namespace: example
spec:
  ports:
  - name: gmweb
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: k8sTicket
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
